--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -29,6 +29,11 @@
                 color: gray;
                 padding: 0px 10px;
             }
+            .hover {
+                &:hover {
+                    color: $highlight;
+                }
+            }
         }
 
         a {
