--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,15 +1,20 @@
+
+.navbar-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 150px;
     letter-spacing: 1px;
+    width: 95%;
 
     .logo  {
-        padding-left: 90px;
         img {
-            border-radius: 50%;
-            height: 110px;
+            height: 90px;
         }
     }
 
@@ -17,10 +22,10 @@
 
     .link-wrapper {
         display: flex;
-        padding-right: 40px;
 
         .link {
-            padding-right: 20px;
+            margin-right: 20px;
+            padding-bottom: 3px;
             text-decoration: none;
             text-transform: uppercase;
             color: black;
@@ -34,6 +39,7 @@
 
         .active {
             color: $highlight;
+            border-bottom: 1px solid $highlight;
         }
 
         .dropdown-menu {
@@ -52,6 +58,7 @@
 
         .category a {
             padding-left: 10px;
+            border: none;
             height: 100%;
             display: flex;
             align-items: center;
