products & filter working

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -37,6 +37,10 @@
                 font-weight: 700;
                 padding: 20px 0px 10px 0px;
             }
+
+            .info {
+                color: gray;
+            }
         }
 
     }
