--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,5 @@ $footer: #202425;
 @import "./banner.scss";
 @import "./footer.scss";
 @import "./contact.scss";
+@import "./about.scss";
+@import "./products.scss";
