--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -39,6 +39,10 @@
                     cursor: pointer;
                 }
 
+                .chosen {
+                    color: $highlight;
+                }
+
                 .amount {
                     font-family: sans-serif;
                 }
