--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,5 @@ $footer: #202425;
 @import "./contact.scss";
 @import "./about.scss";
 @import "./products.scss";
+@import "./product-detail.scss";
+@import "./cart.scss";
