--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -36,6 +36,7 @@
         }
 
         .hover {
+            transition: 0.2s;
             &:hover {
                 color: $highlight;
             }
