--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,7 +10,7 @@
 
 
     .content-wrapper {
-        width: 80%;
+        width: 60%;
         display: flex;
         height: 60%;
         justify-content: space-around;
@@ -33,6 +33,9 @@
             .icons {
                 display: flex;
                 justify-content: space-around;
+                i {
+                    font-size: 1.2em;
+                }
             }
     
     
@@ -55,12 +58,23 @@
         .useful-links-wrapper a {
             text-decoration: none;
             color: white;
+            transition: 0.2s;
+
+            &:hover {
+                color: $highlight;
+            }
         }
 
         .contact-wrapper {
 
             .info {
                 display: flex;
+                align-items: center;
+
+                .phone {
+                    font-family: sans-serif;
+                    font-size: .9em;
+                }
                 
             }
 
