--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -1,5 +1,3 @@
-
-
 .cart-wrapper {
     display: flex;
     justify-content: center;
@@ -54,7 +52,8 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
-
+                        font-family: sans-serif;
+                        font-size: .9em;
                     }
                 }
             }
@@ -62,6 +61,9 @@
             .payment {
                 border: 1px solid black;
                 height: 500px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
 
             .bottom {
@@ -80,9 +82,22 @@
                     }
                 }
             }
-
         }
-
-
     }
+}
+
+.empty {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0px;
+    height: 55vh;
+    border-radius: 3px;
+    box-shadow: 0 0 17px rgba(0,0,0,0.1);
+    width: 70%;
+}
+
+.cart-empty {
+    font-size: 1.5em;
+    letter-spacing: 1px;
+    padding-bottom: 20px;
 }
