--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -49,13 +49,28 @@
                         border: 1px solid #dddddd;
                         width: 20px;
                         height: 20px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+                        @include center-flex;
                         font-family: sans-serif;
                         font-size: .9em;
                     }
                 }
+            }
+
+            button {
+                @include for-button;
+                width: 100px;
+                padding: 8px;
+                margin-left: 40px;
+            }
+    
+            button:hover{
+                @include for-button-hover;
+            }
+
+            .sub-checkout {
+                display: flex;
+                align-items: center;
+
             }
 
             .payment {
