--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -106,27 +106,14 @@
                         padding: 8px 0px 0px 15px;
                     }
 
+
                     button {
-                        font-family: 'Raleway', sans-serif;
-                        display:inline-block;
-                        letter-spacing: 1px;
-                        padding: 13px;
-                        border:0.1em solid $highlight;
-                        margin:0 0.3em 0.3em 0;
-                        border-radius:0.12em;
-                        box-sizing: border-box;
-                        text-decoration:none;
-                        color:white;
-                        text-align:center;
-                        background-color:$highlight;
-                        transition: all 0.2s;
+                        @include for-button;
                         width: 150px;
                     }
-
+            
                     button:hover{
-                        color:$highlight;
-                        background-color: white;
-                        cursor: pointer;
+                        @include for-button-hover;
                     }
 
 
