--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,9 +2,7 @@
     height: 300px; 
     background-color: $footer;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include center-flex;
     letter-spacing: 1px;
     
 
@@ -70,12 +68,8 @@
             .info {
                 display: flex;
                 align-items: center;
-
-                .phone {
-                    font-family: sans-serif;
-                    font-size: .9em;
-                }
-                
+                font-family: sans-serif;
+                font-size: .9em;
             }
 
             i {
