--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,6 +1,7 @@
 .products-page-wrapper {
     display: flex;
     justify-content: center;
+    margin-bottom: 100px;
 
     .category-header {
         letter-spacing: 1px;
@@ -132,27 +133,11 @@
         justify-content: flex-end;
 
         button {
-            font-family: 'Raleway', sans-serif;
-            display:inline-block;
-            letter-spacing: 1px;
-            padding: 13px;
-            border:0.1em solid $highlight;
-            margin:0 0.3em 0.3em 0;
-            border-radius:0.12em;
-            box-sizing: border-box;
-            text-decoration:none;
-            text-align:center;
-            color:$highlight;
-            background-color: white;
-            transition: all 0.2s;
-            width: 120px;
+            @include for-button;
         }
 
         button:hover{
-            background-color:$highlight;
-            color:white;
-
-            cursor: pointer;
+            @include for-button-hover;
         }
     }
 
