before refactor cart

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,7 +2,8 @@
 
     .mission {
         padding-top: 50px;
-        width: 60%;
+        width: 1150px;
+        line-height: 29px;
         
     }
 
@@ -19,7 +20,7 @@
 
     .squares-wrapper {
         padding: 70px 0px;
-        width: 60%;
+        width: 1150px;
 
         .square {
             display: grid;
