--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     .cart-content-wrapper {
-        width: 70%;
+        width: 1150px;
 
         .items-payment-wrapper {
             margin: 40px;
@@ -35,6 +35,7 @@
                     -webkit-text-stroke: 1px white;
                     padding-right: 40px;
                     font-size: .6em;
+                    cursor: pointer;
                 }
 
                 .quantity {
@@ -70,6 +71,12 @@
             .sub-checkout {
                 display: flex;
                 align-items: center;
+
+                .subtotal {
+                    font-family: sans-serif;
+                    font-size: .9em;
+                    letter-spacing: 1px;
+                }
 
             }
 
